--- a/app/src/main/res/layout/activity_weclome.xml
+++ b/app/src/main/res/layout/activity_weclome.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activity.HomeActivity">
+    tools:context=".view.activity.WeclomeActivity">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="home"
+        android:text="weclome"
 
         />
 </android.support.constraint.ConstraintLayout>
