--- a/app/src/main/res/layout/activity_weclome.xml
+++ b/app/src/main/res/layout/activity_weclome.xml
@@ -6,10 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".view.activity.WeclomeActivity">
 
-    <TextView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_weclome"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="weclome"
-
-        />
+        android:layout_height="match_parent"/>
 </android.support.constraint.ConstraintLayout>
