--- a/app/src/main/res/layout/fragment_guide_page.xml
+++ b/app/src/main/res/layout/fragment_guide_page.xml
@@ -10,7 +10,7 @@
         android:id="@+id/iv_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:background="@mipmap/ic_launcher"
+        android:background="@mipmap/ic_launcher"
         android:scaleType="fitXY"
         />
 
@@ -24,6 +24,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="开始"
         android:layout_marginBottom="60dp"
-        android:visibility="visible"
+        android:visibility="gone"
         />
 </android.support.constraint.ConstraintLayout>
