--- a/app/src/main/res/layout/layout_net_error_view.xml
+++ b/app/src/main/res/layout/layout_net_error_view.xml
@@ -10,6 +10,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="loading"
+        android:text="net error"
         />
 </android.support.constraint.ConstraintLayout>
