--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="white">#FFFFFF</color>
     <color name="transparent">#00000000</color>
+
+    <color name="line_toolbar">#FF4081</color>
 </resources>
