--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,14 +20,9 @@
         <item name="android:windowIsTranslucent">false</item>
     </style>
 
-    <!--这是多类型页面-->
-    <declare-styleable name="MultiStateView">
-        <attr name="msv_loadingView" format="reference" />
-        <attr name="msv_successView" format="reference" />
-        <attr name="msv_unknownView" format="reference" />
-        <attr name="msv_netErrorView" format="reference" />
-        <attr name="msv_emptyView" format="reference" />
-        <attr name="msv_emptyViewImage" format="reference" />
-        <attr name="msv_emptyViewText" format="reference|string" />
-    </declare-styleable>
+    <style name="style_line">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:background">@color/line_toolbar</item>
+    </style>
 </resources>
