--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -7,14 +7,9 @@
     android:orientation="vertical"
     tools:context=".test.TestActivity">
 
-    <include
-        layout="@layout/layout_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="42dp"/>
-
-    <com.maple.demo.kotlinmvvm.app.manager.state.MultipleStatusView
-        android:id="@+id/msv_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test"
         />
 </LinearLayout>
