--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="toolbar">#303F9F</color>
     <color name="white">#FFFFFF</color>
     <color name="transparent">#00000000</color>
 
