--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -61,4 +61,13 @@
         android:text="all"
         />
 
+
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:scaleType="fitXY"
+        android:background="@mipmap/ic_launcher"
+        />
 </LinearLayout>
