--- a/app/src/main/res/layout/layout_base.xml
+++ b/app/src/main/res/layout/layout_base.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -7,11 +8,5 @@
     <include
         layout="@layout/layout_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="46dp" />
-
-    <com.maple.demo.kotlinmvvm.app.manager.state.MultipleStatusView
-        android:id="@+id/multiple_status_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="@dimen/public_appbar_height" />
 </LinearLayout>
