--- a/app/src/main/res/layout/layout_no_network_view.xml
+++ b/app/src/main/res/layout/layout_no_network_view.xml
@@ -6,7 +6,7 @@
 
 
     <ImageView
-        android:id="@+id/iv_status_empty"
+        android:id="@+id/iv_status_no_network"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"
@@ -16,28 +16,28 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_status_empty"
+        android:id="@+id/tv_status_no_network"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="center"
-        android:text="暂无数据"
+        android:text="网络异常"
         android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_status_empty" />
+        app:layout_constraintTop_toBottomOf="@id/iv_status_no_network" />
 
     <TextView
-        android:id="@+id/tv_click_empty"
+        android:id="@+id/tv_click_no_network"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="?android:attr/selectableItemBackground"
         android:gravity="center"
         android:padding="10dp"
-        android:text="click_empty"
+        android:text="click_error"
         android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_status_empty" />
+        app:layout_constraintTop_toBottomOf="@id/tv_status_no_network" />
 </android.support.constraint.ConstraintLayout>
